--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ python-pptx==0.6.23
 fpdf==1.7.2
 PyMuPDF==1.23.3
 pdf2image==1.17.0
-python-dotenv==1.0.1cloudconvert
+python-dotenv==1.0.1
+cloudconvert
